# a-stack-of-dishes-lab

./: CMakeLists.txt  main.cpp
src/: dish.hpp  dishstack.cpp  dishstack.hpp
tests/: dishstack_test.cpp
